# serializer version: 1
# name: test_finalize[obj]
  dict({
    'count': 1,
    'created_at': 'approximately_now_datetime',
    'file': dict({
      'id': 1,
      'name': 'malus.fa.gz',
    }),
    'files': list([
      dict({
        'download_url': '/subtractions/1/files/subtraction.fa.gz',
        'id': 1,
        'name': 'subtraction.fa.gz',
        'size': 36461731,
        'subtraction': 1,
        'type': 'fasta',
      }),
    ]),
    'gc': dict({
      'a': 0.2,
      'c': 0.2,
      'g': 0.2,
      'n': 0.2,
      't': 0.2,
    }),
    'id': 1,
    'job': dict({
      'created_at': 'approximately_now_datetime',
      'id': 1,
      'progress': 0,
      'state': <JobState.PENDING: 'pending'>,
      'user': dict({
        'handle': 'leeashley',
        'id': 1,
      }),
      'workflow': <Workflow.CREATE_SUBTRACTION: 'create_subtraction'>,
    }),
    'linked_samples': list([
    ]),
    'name': 'foo',
    'nickname': 'bar',
    'ready': True,
    'upload': dict({
      'created_at': 'approximately_now_datetime',
      'id': 1,
      'name': 'malus.fa.gz',
      'ready': True,
      'removed': False,
      'removed_at': None,
      'reserved': False,
      'size': 723988,
      'type': 'subtraction',
      'uploaded_at': 'approximately_now_datetime',
      'user': dict({
        'handle': 'leeashley',
        'id': 1,
      }),
    }),
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
  })
# ---
# name: test_finalize[pg]
  dict({
    'count': 1,
    'created_at': 'approximately_now_datetime',
    'deleted': False,
    'gc': dict({
      'a': 0.2,
      'c': 0.2,
      'g': 0.2,
      'n': 0.2,
      't': 0.2,
    }),
    'id': 1,
    'job_id': 1,
    'legacy_id': None,
    'name': 'foo',
    'nickname': 'bar',
    'ready': True,
    'upload_id': 1,
    'user_id': 1,
  })
# ---
